# oura-fun

./: .env.example  .gitignore  FEATURES.md  README.md  pyproject.toml  todo.md
.github/workflows/: incremental.yml
docs/: claude-desktop.md
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  ToolCallBadge.tsx
frontend/lib/: api.ts  tokens.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activity/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/app/readiness/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/sleep/: page.tsx
frontend/src/components/: Card.tsx  DashboardLayout.tsx  MultiLineTrend.tsx  NavShell.tsx  PersonPicker.tsx  RefreshBadge.tsx  RingScore.tsx  StatTile.tsx  TrendChart.tsx
frontend/src/lib/: api.ts  refresh-context.tsx  tokens.ts
scripts/: backfill.py  check_auth.py  incremental.py  init_schema.py  run_api.py  sanity_check.py  start_dashboard.sh
src/oura_fun/: client.py  config.py  daily.py  db.py  events.py  mcp_server.py  models.py  people_store.py  sanity.py  timeseries.py  views.py
src/oura_fun/api/: access.py  app.py  chat.py  db.py  main.py  models.py  refresh.py  views.py
src/oura_fun/api/routers/: activity.py  people.py  readiness.py  sleep.py
src/oura_fun/api/routes/: chat.py
src/oura_fun/endpoints/: __init__.py  heartrate.py  sleep.py
tests/: test_access.py  test_api.py  test_backfill.py  test_chat.py  test_chat_api.py  test_client.py  test_config.py  test_daily.py  test_db.py  test_events.py  test_heartrate.py  test_mcp_comparative.py  test_mcp_server.py  test_people_store.py  test_refresh.py  test_sanity.py  test_sleep.py  test_views.py
