[project]
name = "oura-fun"
version = "0.1.0"
description = "Oura Ring data ingestion, DuckDB storage, and MCP server"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oura_fun"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]
