[project]
name = "oura-fun"
version = "0.1.0"
description = "Oura Ring data ingestion, DuckDB storage, and MCP server"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.43.0",
    "duckdb>=1.5.4",
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oura_fun"]

[project.scripts]
oura-mcp = "oura_fun.mcp_server:main"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]
